[package]
name = "libcontainer-rs"
version = "0.1.0"
authors = ["magicalne"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = "0.18"
thiserror = "1.0.20"

[dev-dependencies]
rusty-fork = "0.3.0"