[package]
name = "libcontainer-rs"
version = "0.1.0"
authors = ["magicalne"]
edition = "2018"

[lib]
name = "libcontainer"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = "0.18"
thiserror = "1.0.20"
io-uring = "0.4.0"

[dev-dependencies]
rusty-fork = "0.3.0"